--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  max-width: 480px;
+  /* max-width: 480px; */
   margin: 0 auto;
   padding-bottom: 20px;
 }
@@ -12,10 +12,12 @@
   text-align: center;
   border: 2px solid black;
   background-color: burlywood;
+  max-width: 400px;
+  margin: 0 auto;
 }
-.button:hover {
+/* .button:hover {
   background-color: red;
-}
+} */
 .tableContainer {
   margin-bottom: 55px;
 }
@@ -34,4 +36,22 @@
 .playerName {
   font-weight: 600;
   font-size: 20px;
+}
+
+.playerColumn {
+  display: flex;
+}
+
+.playerByRoleContainer {
+  flex: 1;
+  margin: 0px 10px;
+}
+
+@media screen and (max-width: 900px) {
+  .App {
+    max-width: 480px;
+  }
+  .playerColumn {
+    display: block;
+  }
 }
